switch to token auth

--- a/.github/workflows/nodeshift-publish.yml
+++ b/.github/workflows/nodeshift-publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Nodeshift deploy
         run: |
           npx nodeshift NPM_RUN="npm start" --deploy.port 3000 --expose \
-            --username=${{ secrets.OC_USERNAME }} --password="${{ secrets.OC_PASSWORD }}" \
+            --token=${{ secrets.OC_TOKEN }} \
             --server=${{ secrets.OC_SERVER }} \
             --namespace.name ${{ secrets.OC_NAMESPACE }}
 
